--- a/ödev.html
+++ b/ödev.html
@@ -13,46 +13,49 @@
   </style>
 </head>
 <body>
-<p class="p1"><b>&lt;html&gt;</b></p>
-<p class="p2">&lt;head&gt;&lt;tittle&gt; Gelişim üniversitesi&lt;/tittle&gt;&lt;/head&gt;</p>
-<p class="p2">&lt;body&gt;</p>
-<p class="p2">&lt;form&gt;</p>
-<p class="p2">&lt;label for =“adsoy”&gt;Adınız soyasınız:&lt;/label&gt;&lt;br&gt;</p>
-<p class="p2">&lt;input type=“text”</p>
-<p class="p2">id=“ad_soyadé name=“ad_soyad”</p>
-<p class="p2">size=35&gt;&lt;br&gt;</p>
-<p class="p2">&lt;label for=“şifre”&gt;Şifreniz:</p>
-<p class="p2">&lt;/label&gt;&lt;br&gt;</p>
-<p class="p2">&lt;input type=“password”</p>
-<p class="p2">id=“şifre” name=“şifre”</p>
-<p class="p2">size=35&gt;&lt;br&gt;</p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
-<p class="p2">&lt;label for=“cinsiyet”&gt;</p>
-<p class="p2">Cinsiyet &lt;/label&gt;&lt;br&gt;</p>
-<p class="p2">&lt;input type=“radio”</p>
-<p class="p2">id=“erkek”&gt; name=“erkek” value”=“erkek&gt;</p>
-<p class="p2">&lt;label for=“erkek”&gt;</p>
-<p class="p2">Erkek&lt;/label&gt;&lt;br&gt;</p>
-<p class="p3"><br></p>
-<p class="p2">&lt;input type=“radio”</p>
-<p class="p2">id=“kadın”&gt; name=“cinsiyet” value=“kadın”&gt;</p>
-<p class="p2">&lt;label for=“kadın”&gt;</p>
-<p class="p2">Kadın&lt;/label&gt;&lt;br&gt;</p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
-<p class="p2">&lt;label for=“açıklama”&gt;</p>
-<p class="p2">Açıklamalar &lt;/label&gt; &lt;br&gt;</p>
-<p class="p2">&lt;textarea&gt;</p>
-<p class="p2">&lt;br&gt;&lt;br&gt;</p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
-<p class="p2">&lt;form action=“/kayit_ol.php”method=“get”&gt;</p>
-<p class="p2">&lt;İnput type=“submit” value=“Kayıt Ol”&gt;</p>
-<p class="p2">&lt;input type=“reset” value=“Sıfırla”&gt;</p>
-<p class="p2">&lt;/form&gt;</p>
-<p class="p3"><br></p>
-<p class="p3"><br></p>
+<html>
+<head><tittle> Gelişim üniversitesi</tittle></head>
+<body>
+<form>
+<label for =“adsoy”>Adınız soyasınız:</label><br>
+<input type=“text”
+id=“ad_soyadé name=“ad_soyad”
+size=35><br>
+<label for=“şifre”>Şifreniz:
+</label><br>
+<input type=“password”
+id=“şifre” name=“şifre”
+size=35><br>
+
+
+
+<label for=“cinsiyet”>
+Cinsiyet </label><br>
+<input type=“radio”
+id=“erkek”> name=“erkek” value”=“erkek>
+<label for=“erkek”>
+Erkek</label><br>
+
+<input type=“radio”
+id=“kadın”> name=“cinsiyet” value=“kadın”>
+<label for=“kadın”>
+Kadın</label><br>
+
+
+<label for=“açıklama”>
+Açıklamalar </label> <br>
+<textarea>
+<br><br>
+
+
+<form action=“/kayit_ol.php”method=“get”>
+<İnput type=“submit” value=“Kayıt Ol”>
+<input type=“reset” value=“Sıfırla”>
+</form>
+
+
+
+
+
 </body>
 </html>
